 - [web] removed null characters from JSON responses
 - [web] fixed advanced mailbox search when mailbox name is very long
 - [web] fixed handling of public access rights of Calendars (#4344)
 - [web] fixed server-side CSS sanitization of messages (#4366)
 - [web] cards list not accessible when changing address book in expanded card view
 - [eas] hebrew folders encoding problem using EAS (#4240)
 - [eas] avoid sync requests for shared folders every second (#4275)

3.2.10 (2017-07-05)
-------------------

New features
 - [web] new images viewer in Mail module
 - [web] create list from selected cards (#3561)
 - [eas] initial EAS v16 and email drafts support
 - [core] load-testing scripts to evaluate SOGo performance

Enhancements
 - [core] now possible to {un}subscribe to folders using sogo-tool
 - [web] AngularJS optimizations in Mail module
 - [web] AngularJS optimization of color picker
 - [web] improve display of tasks status
 - [web] added custom fields support from Thunderbird's address book
 - [web] added Latvian (lv) translation - thanks to Juris Balandis
 - [web] expose user's defaults and settings inline
 - [web] can now discard incoming mails during vacation
 - [web] support both backspace and delete keys in Mail and Contacts modules
 - [web] improved display of appointment/task comments and card notes
 - [web] updated Angular Material to version 1.1.4
 - [web] updated CKEditor to version 4.7.1

Bug fixes
 - [web] respect SOGoLanguage and SOGoSupportedLanguages (#4169)
 - [web] fixed adding list members with multiple email addresses
 - [web] fixed responsive condition of login page (960px to 1023px)
 - [web] don't throw errors when accessing nonexistent special mailboxes (#4177)
 - [core] newly subscribed calendars are excluded from freebusy (#3354)
 - [core] don't update subscriptions when owner is not the active user (#3988)
 - [core] strip cr during LDIF import process (#4172)
 - [core] email alarms are sent too many times (#4100)