@@ -1,2 +1,5 @@
 "OtherUsersFolderName"   = "Other Users";
 "SharedFoldersName" = "Shared Folders";
+
+"Report: Marked messages as junk" = "Report: Marked messages as junk";
+"Report: Marked messages as not junk" = "Report: Marked messages as not junk";
